Add /last-comic and /update endpoints
