# internal/controller/router.go
@@ -17,6 +17,8 @@ func NewRouter(service *usecase.Service) *http.ServeMux {
 	handler := NewHandler(service)
 	mux.HandleFunc("GET /load-comics", handler.loadComics)
 	mux.HandleFunc("GET /search-comics", handler.searchComics)
+	mux.HandleFunc("GET /last-comic", handler.getLastComic)
+	mux.HandleFunc("PUT /update", handler.updateComics)
 	mux.HandleFunc("GET /swagger/", httpSwagger.WrapHandler)
 
 	return mux
